fixed issue where anchors in the docs got cut off by fixed header

--- a/css/circle/core/docs.css
+++ b/css/circle/core/docs.css
@@ -4974,7 +4974,7 @@ a:hover .circle--avatar {
 @media screen and (max-width: 860px) {
   /* line 7, ../../../sass/circle/core/docs.sass */
   #docs {
-    padding: 80px 0 0;
+    padding: 80px 0 0 0;
   }
 }
 /* line 12, ../../../sass/circle/core/docs.sass */
@@ -5046,14 +5046,21 @@ a:hover .circle--avatar {
 .docs--article:after {
   clear: both;
 }
+/* line 55, ../../../sass/circle/core/docs.sass */
+.docs--article:before {
+  content: "";
+  display: block;
+  height: 98px;
+  margin: -98px 0 0;
+}
 
-/* line 56, ../../../sass/circle/core/docs.sass */
+/* line 61, ../../../sass/circle/core/docs.sass */
 .box {
   padding: 15px;
   border-radius: 8px;
   border: 2px solid #eee;
 }
-/* line 60, ../../../sass/circle/core/docs.sass */
+/* line 65, ../../../sass/circle/core/docs.sass */
 .box:after {
   content: "";
   font-size: 19px;
@@ -5061,19 +5068,19 @@ a:hover .circle--avatar {
   font-family: "Circle";
 }
 
-/* line 67, ../../../sass/circle/core/docs.sass */
+/* line 72, ../../../sass/circle/core/docs.sass */
 a em {
   text-decoration: none;
   color: #947EFF;
 }
 
-/* line 72, ../../../sass/circle/core/docs.sass */
+/* line 77, ../../../sass/circle/core/docs.sass */
 table [class^="icon-"],
 table [class*=" icon-"] {
   font-size: 24px;
 }
 
-/* line 77, ../../../sass/circle/core/docs.sass */
+/* line 82, ../../../sass/circle/core/docs.sass */
 pre.prettyprint {
   display: block;
   border: 0;
@@ -5087,123 +5094,123 @@ pre.prettyprint {
   margin: 0 0 30px;
 }
 
-/* line 91, ../../../sass/circle/core/docs.sass */
+/* line 96, ../../../sass/circle/core/docs.sass */
 .pln {
   color: #171c19;
 }
 
 @media screen {
-  /* line 96, ../../../sass/circle/core/docs.sass */
+  /* line 101, ../../../sass/circle/core/docs.sass */
   .str {
     color: #489963;
   }
 
-  /* line 99, ../../../sass/circle/core/docs.sass */
+  /* line 104, ../../../sass/circle/core/docs.sass */
   .kwd {
     color: #55859b;
   }
 
-  /* line 102, ../../../sass/circle/core/docs.sass */
+  /* line 107, ../../../sass/circle/core/docs.sass */
   .com {
     color: #78877d;
   }
 
-  /* line 105, ../../../sass/circle/core/docs.sass */
+  /* line 110, ../../../sass/circle/core/docs.sass */
   .typ {
     color: #478c90;
   }
 
-  /* line 108, ../../../sass/circle/core/docs.sass */
+  /* line 113, ../../../sass/circle/core/docs.sass */
   .lit {
     color: #9f713c;
   }
 
-  /* line 111, ../../../sass/circle/core/docs.sass */
+  /* line 116, ../../../sass/circle/core/docs.sass */
   .pun, .opn, .clo {
     color: #171c19;
   }
 
-  /* line 116, ../../../sass/circle/core/docs.sass */
+  /* line 121, ../../../sass/circle/core/docs.sass */
   .tag {
     color: #999;
   }
 
-  /* line 119, ../../../sass/circle/core/docs.sass */
+  /* line 124, ../../../sass/circle/core/docs.sass */
   .atn {
     color: #999;
   }
 
-  /* line 122, ../../../sass/circle/core/docs.sass */
+  /* line 127, ../../../sass/circle/core/docs.sass */
   .atv {
     color: #947EFF;
   }
 
-  /* line 125, ../../../sass/circle/core/docs.sass */
+  /* line 130, ../../../sass/circle/core/docs.sass */
   .dec {
     color: #9f713c;
   }
 
-  /* line 128, ../../../sass/circle/core/docs.sass */
+  /* line 133, ../../../sass/circle/core/docs.sass */
   .var {
     color: #b16139;
   }
 
-  /* line 131, ../../../sass/circle/core/docs.sass */
+  /* line 136, ../../../sass/circle/core/docs.sass */
   .fun {
     color: #478c90;
   }
 }
 @media print, projection {
-  /* line 136, ../../../sass/circle/core/docs.sass */
+  /* line 141, ../../../sass/circle/core/docs.sass */
   .str {
     color: #006600;
   }
 
-  /* line 138, ../../../sass/circle/core/docs.sass */
+  /* line 143, ../../../sass/circle/core/docs.sass */
   .kwd {
     color: #006;
     font-weight: 500;
   }
 
-  /* line 141, ../../../sass/circle/core/docs.sass */
+  /* line 146, ../../../sass/circle/core/docs.sass */
   .com {
     color: #600;
     font-style: italic;
   }
 
-  /* line 144, ../../../sass/circle/core/docs.sass */
+  /* line 149, ../../../sass/circle/core/docs.sass */
   .typ {
     color: #404;
     font-weight: 500;
   }
 
-  /* line 147, ../../../sass/circle/core/docs.sass */
+  /* line 152, ../../../sass/circle/core/docs.sass */
   .lit {
     color: #004444;
   }
 
-  /* line 149, ../../../sass/circle/core/docs.sass */
+  /* line 154, ../../../sass/circle/core/docs.sass */
   .pun, .opn, .clo {
     color: #444400;
   }
 
-  /* line 151, ../../../sass/circle/core/docs.sass */
+  /* line 156, ../../../sass/circle/core/docs.sass */
   .tag {
     color: #006;
     font-weight: 500;
   }
 
-  /* line 154, ../../../sass/circle/core/docs.sass */
+  /* line 159, ../../../sass/circle/core/docs.sass */
   .atn {
     color: #440044;
   }
 
-  /* line 156, ../../../sass/circle/core/docs.sass */
+  /* line 161, ../../../sass/circle/core/docs.sass */
   .atv {
     color: #006600;
   }
 }
-/* line 161, ../../../sass/circle/core/docs.sass */
+/* line 166, ../../../sass/circle/core/docs.sass */
 ol.linenums {
   margin-top: 0;
   margin-bottom: 0;
